--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,14 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link href="styles/main.css" rel="stylesheet" >
     <link href="styles/reset.css" rel="stylesheet"/>
     <link href="styles/login.css" rel="stylesheet"/>
+    <link href="styles/dashboard.css" rel="stylesheet"/>
     <!-- endbuild -->
 </head>
 <body ng-app="pigionWebApp">
@@ -23,9 +25,9 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<div class="container">
-    <div ng-view></div>
-</div>
+
+<div ng-view></div>
+
 
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -65,6 +67,7 @@
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/login.js"></script>
+<script src="scripts/controllers/dashboard.js"></script>
 <!-- endbuild -->
 </body>
 </html>
