--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link href="styles/reset.css" rel="stylesheet"/>
     <link href="styles/login.css" rel="stylesheet"/>
     <link href="styles/dashboard.css" rel="stylesheet"/>
+    <link href="styles/userUpload.css" rel="stylesheet"/>
     <!-- endbuild -->
 </head>
 <body ng-app="pigionWebApp">
@@ -64,10 +65,13 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
+
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/dashboard.js"></script>
+
+<script src="scripts/directives/userUpload/userUpload.js"></script>
 <!-- endbuild -->
 </body>
 </html>
