--- a/app/scripts/directives/userUpload/userUpload.html
+++ b/app/scripts/directives/userUpload/userUpload.html
@@ -22,8 +22,10 @@
             </div>
 
             <div class="password file-info-bit">
-                <i ng-show="!!file.password" class="fa fa-lock"></i>
-                <i ng-show="!file.password" class="fa fa-unlock"></i>
+                <i ng-show="!!file.password" class="fa fa-lock pw-icon"></i>
+                <i ng-show="!file.password" class="fa fa-unlock pw-icon"></i>
+                <i ng-show="!!file.password" ng-repeat="i in getNumPasswordBubbles() track by $index" class="fa fa-circle"></i>
+                <span ng-show="!file.password">no password</span>
             </div>
 
             <div class="time file-info-bit">
