--- a/app/scripts/directives/userUpload/userUpload.html
+++ b/app/scripts/directives/userUpload/userUpload.html
@@ -29,12 +29,13 @@
             </div>
 
             <div class="time file-info-bit">
-
+                <i class="fa fa-clock-o"></i>
+                <span am-time-ago="getDate()"></span>
             </div>
         </div>
 
         <div class="file-size">
-
+            <span>{{file.size}}kb</span>
         </div>
     </div>
 
