--- a/app/scripts/directives/userUpload/userUpload.html
+++ b/app/scripts/directives/userUpload/userUpload.html
@@ -41,6 +41,12 @@
 
 
     <div class="right-ops">
+        <div class="delete">
+            <i class="fa fa-trash fa-lg"></i>
+        </div>
 
+        <div class="copy">
+            <p>copy</p>
+        </div>
     </div>
 </div>
