hotkey support working

--- a/app/scripts/directives/userUpload/userUpload.html
+++ b/app/scripts/directives/userUpload/userUpload.html
@@ -30,7 +30,7 @@
 
             <div class="time file-info-bit">
                 <i class="fa fa-clock-o"></i>
-                <span am-time-ago="getDate()"></span>
+                <span am-time-ago="date"></span>
             </div>
         </div>
 
