--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,11 @@
 <script src="bower_components/moment/moment.js"></script>
 <script src="bower_components/angular-moment/angular-moment.js"></script>
 <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
+<script src="bower_components/lodash/dist/lodash.compat.js"></script>
+<script src="bower_components/restangular/dist/restangular.js"></script>
+<script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+<script src="bower_components/ng-file-upload-shim/angular-file-upload-shim.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -76,6 +81,7 @@
 <script src="scripts/controllers/dashboard.js"></script>
 
 <script src="scripts/directives/userUpload/userUpload.js"></script>
+<script src="scripts/directives/passwordTool/passwordTool.js"></script>
 <!-- endbuild -->
 </body>
 </html>
