--- a/app/scripts/directives/userUpload/userUpload.html
+++ b/app/scripts/directives/userUpload/userUpload.html
@@ -1,4 +1,9 @@
+<div class="progress-background">
+    <progressbar max="max" value="dynamic"></progressbar>
+</div>
+
 <div class="outer-container">
+
     <div class="file-preview">
 
     </div>
@@ -21,12 +26,14 @@
                 <span ng-hide="file.maxDownloads < 0" class="download-text">{{file.numDownloads}} of {{file.maxDownloads}}</span>
             </div>
 
-            <div class="password file-info-bit">
-                <i ng-show="!!file.password" class="fa fa-lock pw-icon"></i>
-                <i ng-show="!file.password" class="fa fa-unlock pw-icon"></i>
-                <i ng-show="!!file.password" ng-repeat="i in getNumPasswordBubbles() track by $index" class="fa fa-circle"></i>
-                <span ng-show="!file.password">no password</span>
-            </div>
+            <password-tool has-password="!!file.password"></password-tool>
+
+            <!--<div class="password file-info-bit">-->
+                <!--<i ng-show="!!file.password" class="fa fa-lock pw-icon"></i>-->
+                <!--<i ng-show="!file.password" class="fa fa-unlock pw-icon"></i>-->
+                <!--<i ng-show="!!file.password" ng-repeat="i in getNumPasswordBubbles() track by $index" class="fa fa-circle"></i>-->
+                <!--<span ng-show="!file.password">no password</span>-->
+            <!--</div>-->
 
             <div class="time file-info-bit">
                 <i class="fa fa-clock-o"></i>
@@ -35,7 +42,8 @@
         </div>
 
         <div class="file-size">
-            <span>{{file.size}}kb</span>
+            <span ng-show="!newFile || (newFile && !!doneUploading)">{{file.size}}kb</span>
+            <span ng-show="(newFile && !doneUploading)">{{percentUploaded}}% uploaded</span>
         </div>
     </div>
 
