--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,10 @@
 
 <script src="scripts/directives/userUpload/userUpload.js"></script>
 <script src="scripts/directives/passwordTool/passwordTool.js"></script>
+
+<script src="scripts/services/userService.js"></script>
+
+<script src="scripts/filters/bytes.js"></script>
 <!-- endbuild -->
 </body>
 </html>
