--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,8 @@
 <script src="scripts/vendor/landing/jquery.scrollto.min.js"></script>
 <script src="scripts/vendor/landing/jquery.localscroll.min.js"></script>
 <script src="scripts/vendor/landing/waypoints.min.js"></script>
-<script src="scripts/vendor/landing/notifications.js"></script>
-<script src="scripts/vendor/landing/init.js"></script>
+<!--<script src="scripts/vendor/landing/notifications.js"></script>-->
+<!--<script src="scripts/vendor/landing/init.js"></script>-->
 <!-- endbower -->
 <!-- endbuild -->
 
