--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,11 @@
     <link href="styles/reset.css" rel="stylesheet"/>
     <link href="styles/landing.css" rel="stylesheet"/>
     <link href="styles/login.css" rel="stylesheet"/>
-    <link href="styles/dashboard.css" rel="stylesheet"/>
+<!--    <link href="styles/dashboard.css" rel="stylesheet"/> -->
     <link href="styles/userUpload.css" rel="stylesheet"/>
     <link href="styles/downloads.css" rel="stylesheet"/>
+    <link href="styles/grid.min.css" rel="stylesheet"/>    
+
 
     <!-- endbuild -->
 </head>
@@ -36,7 +38,7 @@
 
 
 
-
+<div class="bottom_color"></div>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
