Mo Changes, Less Prooblems

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link href="styles/main.css" rel="stylesheet" >
     <link href="styles/reset.css" rel="stylesheet"/>
-    <link href="styles/landing.css" rel="stylesheet"/>
+<!--     <link href="styles/landing.css" rel="stylesheet"/> -->
     <link href="styles/login.css" rel="stylesheet"/>
 <!--    <link href="styles/dashboard.css" rel="stylesheet"/> -->
     <link href="styles/userUpload.css" rel="stylesheet"/>
