--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- font awesome from BootstrapCDN -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+      <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
       <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
       <link rel="stylesheet" href="vendor/angular-hotkeys/build/hotkeys.min.css" />
